# OOP_Lab_2

./: CMakeLists.txt  main.cpp
header/: Departament.h  Learner.h  Man.h  Person.h  Prepod.h  Student.h  Teacher.h
src/: Learner.cpp  Man.cpp  Person.cpp  Prepod.cpp  Student.cpp  Teacher.cpp
